# ppi-model-zoo

./: .gitignore  README.md  pyproject.toml  streamlit.py  test.ipynb
experiments/: create_combined_report.py
experiments/RAPPPID/: train_config.yaml
experiments/RAPPPID/reports/4hubs/: metrics.csv  test_precision_recall_curve_data.csv  test_roc_curve_data.csv
experiments/RAPPPID/reports/human/: metrics.csv  precision_recall_curve_data_T1.csv  precision_recall_curve_data_T2.csv  roc_curve_data_T1.csv  roc_curve_data_T2.csv
experiments/RAPPPID/reports/yeast/: metrics.csv  (+2 more)
experiments/STEP/: train_config.yaml
ppi_zoo/src/datasets/: GoldStandardData.py
ppi_zoo/src/models/: AbstractPPIClassifierModel.py
ppi_zoo/src/scripts/: temp.py  train_model.py
scripts/: data_exploration.ipynb  playground.ipynb  temp.py  train_model.py
scripts/rapppid/: fit.sh  fit_slurm.sh  model_cli.py  original_rapppid_fit.sh  original_rapppid_model_cli.py  original_script.py  script.py  test.sh
scripts/step/: .gitignore  fit.sh  fit_drive_data.sh  fit_slurm.sh  model_cli.py  model_cli_drive_data_test.py  test.sh  test_drive_data.sh
src/ppi_zoo/data/: GoldStandardDataModule.py  GoldStandardDataset.py
src/ppi_zoo/datasets/: GoldStandardData.py  OriginalRapppidDataset.py  RapppidDataset.py  StepGoogleDriveData.py
src/ppi_zoo/metrics/: MetricEnum.py  MetricModule.py  loggers.py
src/ppi_zoo/models/: AbstractPPIClassifierModel.py  GoldStandardPPILightningModule.py
src/ppi_zoo/utils/: data_downloader.py  gold_standard_utils.py  metric_builder.py  metrics.py
(+29 files in other folders)
