[tool.poetry]
name = "ppi-model-zoo"
version = "0.1.0"
description = ""
authors = ["Johannes Melsbach"]
readme = "README.md"
packages = [{include="ppi_zoo", from="src"}]
[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.2.4"
pandas = "^1.1.1"
transformers = "^4.41.2"
scikit-learn = "^1.5.0"
jsonargparse = {extras = ["signatures"], version = "^4.30.0"}
wandb = "^0.17.3"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
